# redaktisto

./: .gitignore  .gitmodules  CMakeLists.txt
src/: CMakeLists.txt  run.c
src/redaktisto/: CMakeLists.txt  editor.c  editor.cc  editor.h  gtk_ui.c  gtk_ui.h  ui.cc  ui.h
tests/: CMakeLists.txt  markdown_parser_test.c  markdown_parser_test.cc
